--- a/public/style.css
+++ b/public/style.css
@@ -82,6 +82,10 @@ body{
     justify-content: space-between;
     position: relative;
 }
+.home .image{
+    border-radius: 50%;
+    margin:40px;
+}
 .hero-content{
     width: 50%;
 }
@@ -91,7 +95,7 @@ body{
     font-weight: 500;
 }
 .highlight{
-    color: #ff3559;
+    color: #A02A4C;
 }
 .profession{
     width: fit-content;
@@ -134,7 +138,7 @@ body{
     padding: 10px 20px;
     text-decoration: none;
     border-radius: 50px;
-    background: #ff3559;
+    background: #A02A4C;
     color: #fff;
     text-transform: capitalize;
     border:none;
@@ -221,7 +225,7 @@ body{
 }
 .skill{
     font-size:2rem ;
-    color: #464646;
+    color: #f2eded;
     line-height: 200px;
     justify-content: center;
 }
@@ -253,7 +257,7 @@ body{
     cursor: pointer;
 }
 .filter-btn.active{
-    background: #ff3559;
+    background: #A02A4C;
     color: #fff;
 }
 
@@ -349,7 +353,7 @@ body{
     width: 100%;
     height:30px;
     text-align: center;
-    background-color: #ff3559;
+    background-color: #A02A4C;
     line-height: 30px;
 
 }
@@ -410,8 +414,10 @@ body{
         padding-bottom: 50px;
     }
     .home .image{
-        width: 250px;
+        border-radius: 50%;
         margin:40px;
+        width: 250px;
+        height: 250px;
     }
     .hero-content{
         width: 70%;
