--- a/public/style.css
+++ b/public/style.css
@@ -266,6 +266,7 @@ body{
     display: grid;
     grid-template-columns:repeat(4,1fr) ;
     grid-gap:20px;
+    min-height: 200px;
 }
 .project-card{
     position: relative;
@@ -289,6 +290,7 @@ body{
     align-items: center;
     transition: .5s;
     text-transform: capitalize;
+    flex-direction: column;
 
 }
 .project-name{
@@ -297,8 +299,6 @@ body{
     text-align: center;
 }
 .tags{
-    position: absolute;
-    bottom: 20px;
     opacity: 0.6;
     width: 90%;
 
